--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,16 @@
       <artifactId>slf4j-api</artifactId>
       <version>1.7.13</version>
     </dependency>
+    <dependency>
+      <groupId>com.netflix.archaius</groupId>
+      <artifactId>archaius-core</artifactId>
+      <version>0.7.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>javaBasic</finalName>
